--- a/mybatis-plus/pom.xml
+++ b/mybatis-plus/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <mybatis-plus.version>3.3.0</mybatis-plus.version>
         <log4j2.version>2.8.1</log4j2.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,11 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <!-- log4j2 -->
